# ocamleditor

./: .gitignore  .merlin  COPYING  NEWS  README  README.md  VERSION  _build.ml  build.ml  header  log.txt  ocamleditor+gtk.nsi  ocamleditor-1.6.1.release.xml  ocamleditor-1.6.1.xml  ocamleditor.nsi  ocamleditor.opam  ocamleditor.project  ocamleditor.project.release  ocamleditor.release.xml  ocamleditor.xml  splash-1.6.1.xcf  splash.xcf
.github/: FUNDING.yml
src/: .directory  about.ml  activity.ml  alignment.ml  annot_lexer.mll  annot_parser.mly  annot_type.ml  annot_types.ml  annotation.ml  args_env_widget.ml  autocomp.ml  autosave.ml  bconf.ml  bconf_console.ml  bconf_list.ml  bconf_old_1.ml  bconf_page.ml  bconf_page_deps.ml  binannot.ml  binannot_ident.ml  binannot_ident_scan.ml  binannot_type.ml  bookmark.ml  bookmark_view.ml  browser.ml  browser_types.ml  build_script.ml  build_script_args.ml  build_script_args_widget.ml  build_script_cmds_widget.ml  build_script_command.ml  build_script_printer.ml  build_script_trg_widget.ml  build_script_ui.ml  build_script_util.ml  cairo_drawable.ml  check_for_updates.ml  checklist.ml  cmt_view.ml  code_folding.ml  (+202 more)
src/common/: app_config.ml  argc.ml  argc.mli  argc_test.ml  async.ml  async.mli  cmd.ml  cmd_line_args.ml  common.ml  dag.ml  dep.ml  dep.mli  dep_ext.ml  file.ml  file_util.ml  list_opt.ml  locks.ml  log.ml  manual_reset_event.ml  manual_reset_event.mli  miscellanea.ml  ocaml_config.ml  option_syntax.ml  process_termination.ml  quote.ml  shell.ml  spawn.ml  terminate_process.c  terminate_process_unix.c  utils.ml
src/gmisclib/: META  button_menu.ml  button_menu.mli  entry_combo_search.ml  entry_combo_search.mli  gmisclib.ml  gmisclib_util.ml  hyperlink.ml  menu_tool_button.ml  menu_tool_button.mli  undo.ml  undo.mli  util.ml  window.ml
src/icons/: icons.ml
src/oebuild/: oebuild - collegamento.lnk  oebuild.ml  oebuild_dag.ml  oebuild_dep.ml  oebuild_dep_dag.ml  oebuild_dep_ext.ml  oebuild_parallel.ml  oebuild_script_util.ml  oebuild_table.ml  oebuild_table.mli  oebuild_tool.ml  oebuild_util.ml
src/oeproc/: oeproc  oeproc.ml  oeproc.opt
src/otherwidgets/: .directory  about.ml  activity.ml  check_for_updates.ml  checklist.ml  dialog.ml  dialog_file_new.ml  dialog_goto.ml  dialog_rename.ml  dialog_save_as.ml  key_assist.ml  license.ml  otherwidgets.ml  otherwidgets_config.ml  tree.ml
src/stdlib_pp/: stdlib_pp.mll
tmp/: oe_config.ml
tools/: comp_process_termination.ml  distclean.ml  editbin.ml  findlib.ml  install.ml  mkicons.ml  mkrelease.ml  mkversion.ml  prepare_build.ml  rc_compile.ml  scripting.ml  uninstall.ml
