opam-version: "2.0"
name: "ocamleditor"
version: "1.14.0"

synopsis:
  "OCamlEditor is a GTK+ source code editor and build tool for OCaml"
description:
  """It provides many features to facilitate editing code, accessing API reference
directly from the editor and compiling projects."""

authors: "Francesco Tovagliari <ftovagliari@gmail.com>"
maintainer: "Vasile Rotaru <vrotaru.md@gmail.com>"

homepage: "https://github.com/vrotaru/ocamleditor"
bug-reports: "https://github.com/vrotaru/ocamleditor/issues"

build: [["ocaml" "build.ml" "ocamleditor"]]
install: [["ocaml" "install.ml" "-prefix" prefix]]

depends: [
  "ocaml" {>= "4.11" & < "4.13"}
  "ocaml-compiler-libs"
  "ocamlfind" {>= "1.4.0"}
  "lablgtk" {>= "2.18.0"}
  "ocp-indent" { >= "1.8.0" }
  "xml-light" {>= "2.2"}
]
depopts: [
  "ocurl"
  "ocamldiff"
]

