opam-version: "2.0"
name: "ocamleditor"
version: "1.14.0"

synopsis:
  "OCamlEditor is a GTK+ source code editor and build tool for OCaml"
description:
  """It provides many features to facilitate editing code, accessing API reference
directly from the editor and compiling projects."""

authors: "Francesco Tovagliari <ftovagliari@gmail.com>"
maintainer: "Vasile Rotaru <vrotaru.md@gmail.com>"

homepage: "https://github.com/ftovagliari/ocamleditor"
bug-reports: "https://github.com/ftovagliari/ocamleditor/issues"
dev-repo: "git+https://github.com/ftovagliari/ocamleditor.git"

build: [["ocaml" "build.ml" "ocamleditor"]]
install: [["ocaml" "tools/install.ml" "-prefix" prefix]]

depends: [
  "ocaml" {>= "4.13" & < "4.14"}
  "ocamlfind" {>= "1.4.0"}
  "lablgtk" {>= "2.18.0"}
  "ocp-indent" { >= "1.8.0" }
  "xml-light" {>= "2.2"}
]
depopts: [
  "ocurl"
  "ocamldiff"
]
