opam-version: "2.0"
name: "ocamleditor"
version: "1.14.2~ocaml.4.14"

synopsis:
  "OCamlEditor is a GTK+ source code editor and build tool for OCaml"
description:
  """It provides many features to facilitate editing code, accessing API reference
directly from the editor and compiling projects."""

authors: "Francesco Tovagliari <ftovagliari@gmail.com>"
maintainer: "Vasile Rotaru <vrotaru.md@gmail.com>"

homepage: "https://github.com/ftovagliari/ocamleditor"
bug-reports: "https://github.com/ftovagliari/ocamleditor/issues"
dev-repo: "git+https://github.com/ftovagliari/ocamleditor.git"

build: [["ocaml" "build.ml" "ocamleditor"]]
install: [["ocaml" "tools/install.ml" "-prefix" prefix]]

depends: [
  "ocaml" {>= "4.14" & < "5"}
  "ocamlfind" {>= "1.4.0"}
  "lablgtk" {>= "2.18.0"}
  "ocp-indent" { >= "1.8.0" }
  "xml-light" {>= "2.2"}
  "yojson" {>= "2.1"}
  "atdgen" {>= "2.12"}
  "ocamldiff" {>= "1.1"}
  "merlin" {= "4.9-414"}
]
depopts: [
  "ocurl"
]
pin-depends: [
  ["ocamldiff.1.1" "git+https://framagit.org/zoggy/ocamldiff.git"]
]
